[gd_scene load_steps=44 format=2]

[ext_resource path="res://Art/Battlefields/RedBattlefield.png" type="Texture" id=1]
[ext_resource path="res://Mini Scenes/LangSystem.gd" type="Script" id=2]
[ext_resource path="res://Mini Scenes/Main/Battlefield.tscn" type="PackedScene" id=3]
[ext_resource path="res://Mini Scenes/Main/ConsoleEnemy.tscn" type="PackedScene" id=4]
[ext_resource path="res://Mini Scenes/Main/Cannon.tscn" type="PackedScene" id=5]
[ext_resource path="res://Art/Canhao (1).png" type="Texture" id=6]
[ext_resource path="res://Art/Highlight1.png" type="Texture" id=7]
[ext_resource path="res://Art/Canhao2V2.png" type="Texture" id=8]
[ext_resource path="res://Art/Highlight2.png" type="Texture" id=9]
[ext_resource path="res://Art/Canhao3.png" type="Texture" id=10]
[ext_resource path="res://Art/Highlight3.png" type="Texture" id=11]
[ext_resource path="res://Scenes/Enemy_GUI.gd" type="Script" id=12]
[ext_resource path="res://Mini Scenes/Main/WeaponTitle.tscn" type="PackedScene" id=13]
[ext_resource path="res://Mini Scenes/Enemies/Trooper.tscn" type="PackedScene" id=14]
[ext_resource path="res://Art/Icons/GuardianIcon.png" type="Texture" id=15]
[ext_resource path="res://Mini Scenes/Enemies/Captain.tscn" type="PackedScene" id=16]
[ext_resource path="res://Mini Scenes/Weapon/ShockW.tscn" type="PackedScene" id=17]
[ext_resource path="res://Mini Scenes/MinionSpawner.tscn" type="PackedScene" id=18]
[ext_resource path="res://Art/Icons/SlickIcon.png" type="Texture" id=19]
[ext_resource path="res://Mini Scenes/Enemies/Hacker.tscn" type="PackedScene" id=20]
[ext_resource path="res://Mini Scenes/Enemies/HackerInit.tscn" type="PackedScene" id=21]
[ext_resource path="res://Mini Scenes/Enemies/RedBlast.tscn" type="PackedScene" id=22]
[ext_resource path="res://Art/Numbers.png" type="Texture" id=23]
[ext_resource path="res://Fonts/FORCED SQUARE.ttf" type="DynamicFontData" id=24]
[ext_resource path="res://Art/Icons/TrooperIcon.png" type="Texture" id=25]
[ext_resource path="res://Mini Scenes/Enemies/Tank.tscn" type="PackedScene" id=26]
[ext_resource path="res://Art/Powers/MagnetMid.png" type="Texture" id=27]
[ext_resource path="res://Art/WeaponTitle.png" type="Texture" id=28]
[ext_resource path="res://Scenes/MainEnemy.gd" type="Script" id=29]
[ext_resource path="res://Art/Icons/BomberIcon.png" type="Texture" id=30]
[ext_resource path="res://Mini Scenes/Enemies/Guardian.tscn" type="PackedScene" id=31]
[ext_resource path="res://Art/Icons/SpeederIcon.png" type="Texture" id=32]
[ext_resource path="res://Mini Scenes/Enemies/Bomber.tscn" type="PackedScene" id=33]
[ext_resource path="res://Scenes/LaneOverlay.gd" type="Script" id=34]
[ext_resource path="res://Mini Scenes/Enemies/Slick.tscn" type="PackedScene" id=35]
[ext_resource path="res://Art/Battlefields/BlueBattlefield.png" type="Texture" id=36]
[ext_resource path="res://Art/Icons/HackerIcon.png" type="Texture" id=37]
[ext_resource path="res://Art/Icons/TankIcon.png" type="Texture" id=38]
[ext_resource path="res://Mini Scenes/Enemies/VioletBlast.tscn" type="PackedScene" id=39]
[ext_resource path="res://Art/Battlefields/VioletBattlefield.png" type="Texture" id=40]
[ext_resource path="res://Art/Icons/CaptainIcon.png" type="Texture" id=41]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 24 )

[sub_resource type="Animation" id=2]
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("BlackFade:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 3.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 0 ), Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 1 ) ]
}

[node name="MainEnemy" type="Node"]
script = ExtResource( 29 )
_background_list = [ ExtResource( 36 ), ExtResource( 1 ), ExtResource( 40 ) ]

[node name="BlackBackground" type="ColorRect" parent="."]
margin_right = 804.0
margin_bottom = 794.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Battlefield" parent="." instance=ExtResource( 3 )]
position = Vector2( 250.287, 398.178 )
texture = ExtResource( 1 )

[node name="MinionSpawner" parent="." instance=ExtResource( 18 )]
hacker = ExtResource( 20 )
hacker_init = ExtResource( 21 )
red_blast = ExtResource( 22 )
bomber = ExtResource( 33 )
slick = ExtResource( 35 )
violet_blast = ExtResource( 39 )

[node name="LangSystem" type="Node" parent="."]
script = ExtResource( 2 )

[node name="Cannon1" parent="." instance=ExtResource( 5 )]
position = Vector2( 110.125, 719.101 )
sprite = ExtResource( 6 )
highlight = ExtResource( 7 )

[node name="Cannon2" parent="." instance=ExtResource( 5 )]
position = Vector2( 180.712, 719.168 )
target_lane = 2
sprite = ExtResource( 8 )
highlight = ExtResource( 9 )

[node name="Cannon3" parent="." instance=ExtResource( 5 )]
position = Vector2( 322.559, 717.751 )
target_lane = 4
sprite = ExtResource( 10 )
highlight = ExtResource( 11 )

[node name="BlackBackground2" type="ColorRect" parent="."]
margin_left = 504.18
margin_top = 0.94812
margin_right = 804.18
margin_bottom = 794.948
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="RedBox2" type="ColorRect" parent="."]
margin_left = 507.259
margin_top = 74.8622
margin_right = 803.259
margin_bottom = 85.8622
color = Color( 0.603922, 0.0156863, 0.0156863, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TrooperTitle" parent="." instance=ExtResource( 13 )]
margin_left = 512.237
margin_top = 452.116
margin_right = 73.2368
margin_bottom = -285.884
color = Color( 0.603922, 0.0156863, 0.0156863, 1 )
sprite = ExtResource( 25 )
_weapon = ExtResource( 14 )
_difficulty = 0

[node name="TankTitle" parent="." instance=ExtResource( 13 )]
margin_left = 512.002
margin_top = 400.91
margin_right = 90.002
margin_bottom = -330.09
color = Color( 0.603922, 0.0156863, 0.0156863, 1 )
sprite = ExtResource( 38 )
_weapon = ExtResource( 26 )

[node name="SpeederTitle" parent="." instance=ExtResource( 13 )]
margin_left = 511.893
margin_top = 349.065
margin_right = 89.8949
margin_bottom = -381.935
color = Color( 0.603922, 0.0156863, 0.0156863, 1 )
sprite = ExtResource( 32 )
_weapon = ExtResource( 17 )
_difficulty = 2

[node name="BomberTitle" parent="." instance=ExtResource( 13 )]
margin_left = 511.572
margin_top = 297.651
margin_right = 89.572
margin_bottom = -433.349
color = Color( 0.603922, 0.0156863, 0.0156863, 1 )
sprite = ExtResource( 30 )
_weapon = ExtResource( 33 )
_difficulty = 3

[node name="SlickTitle" parent="." instance=ExtResource( 13 )]
margin_left = 512.0
margin_top = 247.0
margin_right = 71.0
margin_bottom = -484.0
color = Color( 0.603922, 0.0156863, 0.0156863, 1 )
sprite = ExtResource( 19 )
_weapon = ExtResource( 35 )
_difficulty = 4

[node name="HackerTitle" parent="." instance=ExtResource( 13 )]
margin_left = 511.887
margin_top = 195.892
margin_right = 89.8871
margin_bottom = -535.108
color = Color( 0.603922, 0.0156863, 0.0156863, 1 )
sprite = ExtResource( 37 )
_weapon = ExtResource( 20 )
_difficulty = 5

[node name="GuardianTitle" parent="." instance=ExtResource( 13 )]
margin_left = 512.016
margin_top = 144.686
margin_right = 90.0165
margin_bottom = -586.314
color = Color( 0.603922, 0.0156863, 0.0156863, 1 )
sprite = ExtResource( 15 )
_weapon = ExtResource( 31 )
_difficulty = 6

[node name="CaptainTitle" parent="." instance=ExtResource( 13 )]
margin_left = 512.427
margin_top = 94.0029
margin_right = 90.4285
margin_bottom = -636.997
color = Color( 0.603922, 0.0156863, 0.0156863, 1 )
sprite = ExtResource( 41 )
_weapon = ExtResource( 16 )
_difficulty = 7

[node name="RedBox" type="ColorRect" parent="."]
margin_left = 506.445
margin_top = 508.154
margin_right = 802.445
margin_bottom = 519.154
color = Color( 0.603922, 0.0156863, 0.0156863, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Enemy_GUI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 510.175
margin_top = 7.17871
margin_right = 71.1748
margin_bottom = -730.821
rect_scale = Vector2( 0.79, 0.79 )
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="TextureRect" parent="Enemy_GUI"]
margin_right = 40.0
margin_bottom = 40.0
texture = ExtResource( 28 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Timer" type="Label" parent="Enemy_GUI"]
margin_left = 10.0582
margin_top = 5.55018
margin_right = 375.058
margin_bottom = 65.5502
rect_scale = Vector2( 0.9, 0.95 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.392157, 0.392157, 0.392157, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "0:10"
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Lives" type="Label" parent="Enemy_GUI"]
margin_left = 29.5987
margin_top = 5.55018
margin_right = 394.598
margin_bottom = 65.5502
rect_scale = Vector2( 0.9, 0.95 )
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.392157, 0.392157, 0.392157, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "4/4"
align = 2
valign = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Console" parent="." instance=ExtResource( 4 )]
margin_left = 496.801
margin_top = 666.579
margin_right = 12.8012
margin_bottom = -13.4208

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 253.262, 750.563 )
scale = Vector2( 0.806, 0.812 )
texture = ExtResource( 23 )

[node name="LaneOverlay" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 37.665, 400 )
scale = Vector2( 0.586293, 0.860246 )
texture = ExtResource( 27 )
script = ExtResource( 34 )
target_lane = 0
move_speed = 12
sprite = ExtResource( 27 )

[node name="BlackFade" type="ColorRect" parent="."]
margin_left = 2.0
margin_top = -9.0
margin_right = 1730.0
margin_bottom = 1198.0
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Fade = SubResource( 2 )

[connection signal="passed_threshold" from="MinionSpawner" to="." method="_on_MinionSpawner_passed_threshold"]
[connection signal="phase_empty" from="MinionSpawner" to="." method="_on_MinionSpawner_phase_empty"]
[connection signal="send_alert" from="MinionSpawner" to="." method="send_alert"]
[connection signal="damaged" from="Cannon1" to="." method="cannon_damaged"]
[connection signal="damaged" from="Cannon2" to="." method="cannon_damaged"]
[connection signal="damaged" from="Cannon3" to="." method="cannon_damaged"]
[connection signal="dead" from="Enemy_GUI" to="." method="victory"]
[connection signal="command_typed" from="Console" to="." method="_on_Console_command_typed"]
[connection signal="tab_console" from="Console" to="." method="_on_Console_tab_console"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
